--- a/UI/QuanLyNhanVien/FormThemNhanVien.form
+++ b/UI/QuanLyNhanVien/FormThemNhanVien.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JDialogFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
     <Property name="title" type="java.lang.String" value="T&#x1ea1;o T&#xe0;i Kho&#x1ea3;n"/>
@@ -62,11 +62,11 @@
                   </Group>
                   <EmptySpace min="-2" pref="38" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                      <Component id="txtCapNhatTenNV" max="32767" attributes="0"/>
-                      <Component id="txtCapNhatSDTNV" max="32767" attributes="0"/>
-                      <Component id="cbCapNhatLoaiNV" min="-2" pref="128" max="-2" attributes="0"/>
-                      <Component id="txtThemTenDangNhap" max="32767" attributes="0"/>
-                      <Component id="jPasswordField1" pref="217" max="32767" attributes="0"/>
+                      <Component id="textfeildTenNhanVien" max="32767" attributes="0"/>
+                      <Component id="textfeildSDT" max="32767" attributes="0"/>
+                      <Component id="comboxLoai" min="-2" pref="128" max="-2" attributes="0"/>
+                      <Component id="textfieldTenDangNhap" max="32767" attributes="0"/>
+                      <Component id="passwordFeild" pref="217" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace pref="52" max="32767" attributes="0"/>
               </Group>
@@ -78,7 +78,7 @@
                           <EmptySpace min="-2" pref="180" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="1" attributes="0">
-                          <Component id="btnXacNhanThemTK" min="-2" pref="150" max="-2" attributes="0"/>
+                          <Component id="buttonXacNhan" min="-2" pref="150" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="145" max="-2" attributes="0"/>
                       </Group>
                   </Group>
@@ -93,7 +93,7 @@
                   <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="txtCapNhatTenNV" alignment="3" min="-2" pref="31" max="-2" attributes="0"/>
+                      <Component id="textfeildTenNhanVien" alignment="3" min="-2" pref="31" max="-2" attributes="0"/>
                   </Group>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" attributes="0">
@@ -102,26 +102,26 @@
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Component id="txtCapNhatSDTNV" min="-2" pref="30" max="-2" attributes="0"/>
+                          <Component id="textfeildSDT" min="-2" pref="30" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="cbCapNhatLoaiNV" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
+                      <Component id="comboxLoai" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                       <Component id="jLabel4" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel5" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="txtThemTenDangNhap" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
+                      <Component id="textfieldTenDangNhap" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel6" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jPasswordField1" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
+                      <Component id="passwordFeild" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
-                  <Component id="btnXacNhanThemTK" min="-2" pref="48" max="-2" attributes="0"/>
+                  <Component id="buttonXacNhan" min="-2" pref="48" max="-2" attributes="0"/>
                   <EmptySpace pref="26" max="32767" attributes="0"/>
               </Group>
           </Group>
@@ -144,7 +144,7 @@
             <Property name="text" type="java.lang.String" value="T&#xca;N NH&#xc2;N VI&#xca;N"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="txtCapNhatTenNV">
+        <Component class="javax.swing.JTextField" name="textfeildTenNhanVien">
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel3">
           <Properties>
@@ -154,7 +154,7 @@
             <Property name="text" type="java.lang.String" value="S&#x1ed0; &#x110;I&#x1ec6;N THO&#x1ea0;I"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="txtCapNhatSDTNV">
+        <Component class="javax.swing.JTextField" name="textfeildSDT">
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel4">
           <Properties>
@@ -164,7 +164,7 @@
             <Property name="text" type="java.lang.String" value="LO&#x1ea0;I NH&#xc2;N VI&#xca;N"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JComboBox" name="cbCapNhatLoaiNV">
+        <Component class="javax.swing.JComboBox" name="comboxLoai">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="3">
@@ -186,7 +186,7 @@
             <Property name="text" type="java.lang.String" value="T&#xca;N &#x110;&#x102;NG NH&#x1eac;P"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="txtThemTenDangNhap">
+        <Component class="javax.swing.JTextField" name="textfieldTenDangNhap">
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel6">
           <Properties>
@@ -196,9 +196,9 @@
             <Property name="text" type="java.lang.String" value="M&#x1eac;T KH&#x1ea8;U"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JPasswordField" name="jPasswordField1">
+        <Component class="javax.swing.JPasswordField" name="passwordFeild">
         </Component>
-        <Component class="javax.swing.JButton" name="btnXacNhanThemTK">
+        <Component class="javax.swing.JButton" name="buttonXacNhan">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="d5" green="9b" red="5b" type="rgb"/>
@@ -221,7 +221,7 @@
             </Property>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnXacNhanThemTKActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="buttonXacNhanActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
