--- a/UI/UI_Main.form
+++ b/UI/UI_Main.form
@@ -71,7 +71,7 @@
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace max="-2" attributes="0"/>
+                  <EmptySpace min="-2" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
                           <Group type="103" groupAlignment="1" attributes="0">
@@ -80,7 +80,7 @@
                           </Group>
                           <EmptySpace max="32767" attributes="0"/>
                       </Group>
-                      <Group type="102" alignment="1" attributes="0">
+                      <Group type="102" attributes="0">
                           <Group type="103" groupAlignment="1" attributes="0">
                               <Component id="txtThongTinDangNhap" alignment="1" max="32767" attributes="0"/>
                               <Component id="btnDangXuat" alignment="0" max="32767" attributes="0"/>
@@ -98,10 +98,10 @@
                                   </Group>
                               </Group>
                           </Group>
-                          <EmptySpace min="-2" pref="49" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="11" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <Component id="pnBody" min="-2" pref="612" max="-2" attributes="0"/>
+                  <Component id="pnBody" pref="650" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
