--- a/UI/QuanLyNhanVien/UI_QuanLyTaiKhoan.form
+++ b/UI/QuanLyNhanVien/UI_QuanLyTaiKhoan.form
@@ -145,14 +145,14 @@
                 <DimensionLayout dim="0">
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                          <EmptySpace min="-2" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="1" attributes="0">
                               <Component id="buttonLamMoi" pref="58" max="32767" attributes="0"/>
                               <Component id="buttonSua" alignment="0" pref="58" max="32767" attributes="0"/>
                               <Component id="buttonXoa" alignment="0" max="32767" attributes="0"/>
                               <Component id="buttonThem" alignment="0" max="32767" attributes="0"/>
                           </Group>
-                          <EmptySpace max="32767" attributes="0"/>
+                          <EmptySpace min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
